[gd_scene load_steps=6 format=3 uid="uid://b3a4573kbhxh7"]

[ext_resource type="Script" path="res://scripts/ui/buy_item.gd" id="1_huqkf"]
[ext_resource type="FontFile" uid="uid://s15272omc2m3" path="res://assets/fonts/retro.ttf" id="1_j85y8"]
[ext_resource type="AudioStream" uid="uid://dtdtxerciseny" path="res://assets/audio/sfx/ui/buttonrollover.wav" id="3_hk3pe"]
[ext_resource type="AudioStream" uid="uid://b5x8iqv0hy4aj" path="res://assets/audio/sfx/ui/buttonclick.wav" id="4_x17aq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ryqs1"]
bg_color = Color(0.533333, 0.533333, 0.533333, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 4
anti_aliasing = false

[node name="BuyItem" type="HBoxContainer"]
alignment = 1
script = ExtResource("1_huqkf")
rarenesss_color = Color(1, 1, 1, 1)

[node name="Level" type="PanelContainer" parent="."]
modulate = Color(0.374139, 0.374139, 0.374139, 1)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ryqs1")

[node name="Label" type="Label" parent="Level"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_j85y8")
theme_override_font_sizes/font_size = 22
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("1_j85y8")
theme_override_font_sizes/font_size = 22
text = "null"
vertical_alignment = 1

[node name="Price" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("1_j85y8")
theme_override_font_sizes/font_size = 22
text = "$0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_hk3pe")

[node name="Press" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_x17aq")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
